<resources>
    <string name="app_name">Waver</string>

    <string name="btn_remove_loop">Remove</string>
    <string name="title_composition">Composition</string>
    <string name="hint_no_loops_ig">No Loops</string>
    <string name="hint_no_loops_small">Add a loop from the library</string>
    <string name="title_loop_library">Loop Library</string>
    <string name="desc_volume_icon">Volume icon</string>
    <string name="hint_profile_name">Name</string>
    <string name="btn_create_profile">Create</string>
    <string name="btn_back">Back</string>
    <string name="btn_save_profile">Save As Profile</string>
    <string name="desc_profile_img">Profile image</string>
    <string name="snack_profile_created">Profile created</string>
    <string name="snack_profile_create_error">Cannot create profile</string>
    <string name="delete">Delete</string>
    <string name="profile_delete_msg">Are you sure you want to delete this profile?</string>
    <string name="profile_delete_title">Delete <b>%1$s</b></string>
    <string name="snack_profile_deleted">Deleted profile</string>
    <string name="snack_profile_loaded">Profile loaded</string>
    <string name="hint_no_profile_small">You don\'t have any profile</string>
    <string name="hint_no_profile_big">No Profiles</string>
    <string name="head_loops">Loops</string>
</resources>
